# wireguard-configure-generator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  config.example.json  debug_super_complex.py  hello.py  pyproject.toml  pytest.ini  wg_conf_gen.py  wg_keys.db  wg_keys.json
docs/: allowed_ips_best_practices.md  claude_log.md  connection_verification.md  detail.md  group_config_guide.md  gui.md  prd.md  smart_route.md  smart_routing_guide.md  structure.md
examples/: demo_layered_routing.py  demo_simulate.py  fix_endpoints.py  generate_super_complex_topology.py  group_complex.yaml  group_layered_routing.yaml  group_mesh.yaml  group_network.yaml  group_simple.yaml  group_star.yaml  mock_demo.py  nodes.json  nodes.yaml  nodes_complicated.yaml  nodes_mesh_relay.json  super_complex_nodes.yaml  super_complex_topology.yaml  topology.json  topology.yaml  topology_complicated.yaml  topology_multipath.json  topology_new.json
scripts/: run_gui_poc.sh  test_gui_poc.py  validate_gui_poc.py
tests/: test_builder.py  test_builder_with_mock.py  test_cli.py  test_cli_keys.py  test_config.py  test_config_simple.py  test_crypto.py  test_gui_integration.py  test_integration_with_mock.py  test_layered_routing.py  test_loader.py  test_logger.py  test_render.py  test_route_optimizer.py  test_simple_storage.py  test_simulator.py  test_smart_builder.py  test_storage.py  test_utils.py  test_visualizer.py  test_wg_mock.py
wg_mesh_gen/: __init__.py  builder.py  cli.py  crypto.py  data_utils.py  file_utils.py  group_network_builder.py  loader.py  logger.py  (+12 more)
(+75 files in other folders)
